fixed spacing issue between navbar and home

--- a/Burger-review/src/App.css
+++ b/Burger-review/src/App.css
@@ -39,12 +39,13 @@
   max-height: 100%;
   min-height: 100%;
   background-color: #282c34;
-
+margin: 0px;
   /* height: 100%; */
 }
 
 #test {
   background-color: lightgrey;
+
 }
 /* #top-bar {
   background-color: red;
@@ -61,7 +62,14 @@
 /* #hr {
   margin: 0;
 } */
-#navbar {
+.navbar {
 background-color: grey;
-margin: 0;
+}
+#bdiv1 {
+  text-align: center;
+  position: static;
+  max-height: 100%;
+  min-height: 100%;
+  background-color: #282c34;
+margin: 0px;
 }
